--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,233 +6,192 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港
-    type: trojan
-    server: aaaa.aaaa.gay
-    port: 50063
-    udp: true
-    password: 36e7d02b-9e7e-360d-9a7d-85b00e43f660
-    sni: hktddns.doubledou.icu
-    skip-cert-verify: true
-    network: tcp
-  - &id002
-    name: 🇫🇷_FR_法国->🇳🇱_NL_荷兰
-    type: vmess
-    server: 156.249.18.162
-    port: 42292
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: none
-  - &id003
-    name: 🇭🇰_HK_香港->🇳🇱_NL_荷兰
-    type: vmess
-    server: 156.245.8.83
-    port: 48123
-    cipher: auto
-    uuid: d7735058-1dac-4618-99ff-0aa0441ec2d7
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: none
-  - &id004
-    name: 🇳🇱_NL_荷兰
-    type: ssr
-    server: 163.172.218.164
-    port: 443
-    password: NewBypasser2023
-    cipher: aes-256-ctr
-    obfs: tls1.2_ticket_auth
-    protocol: origin
-    obfs-param: cdn.appsflyer.com
-  - &id005
-    name: 🇰🇷_KR_韩国_1
-    type: ss
-    server: 3.36.103.134
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id006
     name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 142.4.112.11
-    port: 51091
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id007
+    type: ss
+    server: 216.52.183.244
+    port: 80
+    password: 83XvX4Vo%*3a
+    cipher: aes-128-gcm
+    plugin: obfs
+    plugin-opts:
+      mode: http
+  - &id002
     name: 🇺🇸_US_美国_2
     type: vmess
-    server: 140.99.157.83
-    port: 47839
+    server: 64.32.21.241
+    port: 44313
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    uuid: 57f93e92-ebb9-4f16-9bdc-8225d2010995
     alterId: 64
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id008
+  - &id003
     name: 🇺🇸_US_美国_3
     type: vmess
-    server: 140.99.140.170
-    port: 44932
+    server: 137.175.18.88
+    port: 42002
     cipher: auto
     uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
     alterId: 64
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id009
+  - &id004
     name: 🇺🇸_US_美国_4
     type: vmess
-    server: 64.32.4.6
-    port: 50005
+    server: 108.186.116.185
+    port: 55005
     cipher: auto
     uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
     alterId: 64
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id010
-    name: 🇹🇼_TW_台湾_1
-    type: ss
-    server: 103.177.33.180
-    port: 443
-    password: 9e44e9ffe5c2
-    cipher: chacha20-ietf-poly1305
-    plugin: v2ray-plugin
-    plugin-opts:
-      mode: websocket
-      host: wtw1000mline004.chilines.club
-      path: /isaifqaagpi
-      mux: true
-  - &id011
-    name: 🇫🇷_FR_法国
-    type: ss
-    server: 54.36.115.241
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id012
+  - &id005
     name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 192.74.235.196
+    port: 50040
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇫🇷_FR_法国_1
     type: ss
-    server: weo-sg-1.laowufly.cf
-    port: 2333
-    password: NodeByTG@Weoworks/FUCK!!!
+    server: 149.202.82.172
+    port: 2376
+    password: faBAoD54k87UJG7
     cipher: aes-256-gcm
-  - &id013
+  - &id007
     name: 🇺🇸_US_美国_6
-    type: ss
-    server: weo-sg-2.laowufly.cf
-    port: 23333
-    password: NodeByTG@Weoworks/FUCK!!!
-    cipher: aes-256-gcm
-  - &id014
-    name: 🇺🇸_US_美国_7
     type: vmess
-    server: 137.175.54.211
-    port: 50502
+    server: 104.27.96.113
+    port: 2053
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
+    uuid: 3a73acf2-c7e3-43b9-fca9-bdd2eb886186
+    alterId: 0
+    tls: true
     skip-cert-verify: true
-  - &id015
-    name: 🇺🇸_US_美国_8
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: ylks.vtcss.top
+  - &id008
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
     type: vmess
-    server: 45.92.160.21
-    port: 47839
+    server: mci.saintink.eu.org
+    port: 443
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
+    uuid: c226d9fa-b5a7-4f6e-9532-50137c89311d
+    alterId: 0
+    tls: true
     skip-cert-verify: true
-  - &id016
-    name: 🇰🇷_KR_韩国_2
+    network: ws
+    ws-opts:
+      path: nl1.v2rayserv.com/vmess
+      headers:
+        host: 4.saintink.eu.org
+  - &id009
+    name: 🇰🇷_KR_韩国
     type: ss
-    server: 43.201.15.234
+    server: 43.200.1.53
     port: 443
     password: amazonskr05
     cipher: aes-256-cfb
-  - &id017
-    name: 🇳🇴_NO_挪威
-    type: ss
-    server: 185.90.61.153
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id018
+  - &id010
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 199.19.104.195
+    port: 53383
+    cipher: auto
+    uuid: afbb87ab-913c-4524-becc-0d2e565ac358
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id011
+    name: 🇩🇪_DE_德国->🇪🇸_ES_西班牙
+    type: vmess
+    server: 45.14.174.152
+    port: 80
+    cipher: auto
+    uuid: 71cecc3f-e274-43f5-81a7-af37b1e3b185
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: fr.66.now.cc
+  - &id012
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 162.159.36.24
+    port: 2053
+    cipher: auto
+    uuid: 3a73acf2-c7e3-43b9-fca9-bdd2eb886186
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: ylks.vtcss.top
+  - &id013
+    name: 🇹🇼_TW_台湾
+    type: vmess
+    server: tw1.kidcc.xyz
+    port: 8443
+    cipher: auto
+    uuid: a8974bec-526d-4b4e-a46f-f0d6626ca576
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: tw1.kidcc.xyz
+  - &id014
     name: 🇺🇸_US_美国_9
-    type: ss
-    server: 216.24.253.23
-    port: 443
-    password: ami888
-    cipher: aes-256-gcm
-  - &id019
+    type: vmess
+    server: 162.159.250.183
+    port: 2086
+    cipher: auto
+    uuid: eb943c5b-ac55-46f9-8710-d0641c38ae9b
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: uxx.vtcss.top
+  - &id015
     name: 🇺🇸_US_美国_10
-    type: ss
-    server: 38.91.107.245
-    port: 1230
-    password: H5S0hvcxRi#YLmgU
-    cipher: chacha20-ietf-poly1305
-  - &id020
-    name: 🇺🇸_US_美国_11
     type: vmess
-    server: 192.74.232.225
-    port: 443
+    server: 141.101.123.144
+    port: 2086
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    servername: www.54092415.xyz
-    network: ws
-    ws-opts:
-      path: /path/1687338535600
-  - &id021
-    name: 🇺🇸_US_美国_12
-    type: vmess
-    server: 72.18.82.216
-    port: 36180
-    cipher: auto
-    uuid: aca9e186-a4e5-4918-ade0-7e74c89504e1
+    uuid: eb943c5b-ac55-46f9-8710-d0641c38ae9b
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id022
-    name: 🇺🇸_US_美国_13
-    type: vmess
-    server: 192.74.236.29
-    port: 41866
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id023
-    name: 🇺🇸_US_美国_14
-    type: vmess
-    server: aaaa.wxx.gay
-    port: 443
-    cipher: auto
-    uuid: 28c4d2b2-20cd-11ee-a561-000017022008
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /look
-  - &id024
-    name: 🇺🇸_US_美国_15
+      path: /qwer
+      headers:
+        host: uxx.vtcss.top
+  - &id016
+    name: 🇳🇱_NL_荷兰->🇺🇸_US_美国_1
     type: vmess
-    server: 104.27.30.6
+    server: 188.114.96.2
     port: 2086
     cipher: auto
     uuid: dac9cf36-ff4c-4d90-d549-d39086e75088
@@ -244,7 +203,122 @@ proxies:
       path: /qwer
       headers:
         host: ylks.vtcss.top
+  - &id017
+    name: 🇭🇰_HK_香港_1
+    type: vmess
+    server: 43.154.233.89
+    port: 45516
+    cipher: auto
+    uuid: 2264f24e-d814-4aa6-98c0-ed5a8322a0eb
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /hk12/getData
+      headers:
+        host: hk12.verichains.co
+  - &id018
+    name: 🇯🇵_JP_日本
+    type: vmess
+    server: 0kxedm1x8q8lksmj11.xingbayun.buzz
+    port: 443
+    cipher: auto
+    uuid: 1320997d-6838-4da9-8faf-bd10cec68fb6
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /zh-cn
+      headers:
+        host: www.microsoft.com
+  - &id019
+    name: 🇨🇳_CN_中国->🇰🇷_KR_韩国
+    type: trojan
+    server: gzdx.jcnode.top
+    port: 63300
+    udp: true
+    password: 1330c4e0-27dc-41bd-9850-12d10f414582
+    sni: sk01.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id020
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_1
+    type: trojan
+    server: gzyd.jcnode.top
+    port: 54088
+    udp: true
+    password: 1330c4e0-27dc-41bd-9850-12d10f414582
+    sni: hk04.ckcloud.info
+    skip-cert-verify: true
+    network: tcp
+  - &id021
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
+    type: trojan
+    server: assets.flareai.site
+    port: 13543
+    udp: true
+    password: 31cb7fea-3414-466d-a287-8bb8173608c4
+    skip-cert-verify: true
+    network: tcp
+  - &id022
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国
+    type: trojan
+    server: 120.204.94.83
+    port: 34001
+    udp: true
+    password: 334b58ea-d511-4d45-b8fa-35da1fc4d2dd
+    skip-cert-verify: true
+    network: tcp
+  - &id023
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: 23.224.202.86
+    port: 57702
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id024
+    name: 🇬🇧_GB_英国
+    type: trojan
+    server: 18.135.101.40
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
   - &id025
+    name: 🇭🇰_HK_香港_2
+    type: vmess
+    server: hk1.looooooongnet.lol
+    port: 10001
+    cipher: auto
+    uuid: afa2b3af-248e-43a1-ad6b-076cca22e302
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id026
+    name: 🇳🇱_NL_荷兰->🇩🇪_DE_德国
+    type: vmess
+    server: dearmb.76898102.xyz
+    port: 2052
+    cipher: auto
+    uuid: 6ab8886d-dcb5-30c7-8376-caa97ef36e2a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ancihgrt
+      headers:
+        host: dearmb.76898102.xyz
+  - &id027
     name: 🇫🇷_FR_法国->🇺🇸_US_美国
     type: vmess
     server: 173.245.49.115
@@ -259,10 +333,10 @@ proxies:
       path: /qwer
       headers:
         host: ylks.vtcss.top
-  - &id026
-    name: 🇺🇸_US_美国_16
+  - &id028
+    name: 🇳🇱_NL_荷兰->🇺🇸_US_美国_2
     type: vmess
-    server: 104.25.254.99
+    server: 188.114.99.170
     port: 80
     cipher: auto
     uuid: 298530df-8418-4bc6-bff2-eeee595bf5cd
@@ -274,84 +348,50 @@ proxies:
       path: /qwer
       headers:
         host: ylks.vtcss.top
-  - &id027
-    name: 🇭🇰_HK_香港->🇯🇵_JP_日本
+  - &id029
+    name: 🇺🇸_US_美国_12
     type: vmess
-    server: 27.126.206.62
+    server: 104.18.23.36
     port: 80
     cipher: auto
-    uuid: e52d79bb-b26e-4416-ac8a-7755176299a6
+    uuid: 298530df-8418-4bc6-bff2-eeee595bf5cd
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /9SCqOah8/
+      path: /qwer
       headers:
-        host: jp1.ielaina.com
-  - &id028
-    name: 🇹🇼_TW_台湾_2
-    type: vmess
-    server: tw.henyo.us
-    port: 31235
-    cipher: auto
-    uuid: 56edb80c-4e0b-3668-9de5-3be62bcb59d7
-    alterId: 0
-    tls: false
+        host: ylks.vtcss.top
+  - &id030
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_3
+    type: trojan
+    server: catlog.flareai.science
+    port: 13543
+    udp: true
+    password: da9890cd-21d1-46a1-9161-6633098a81b4
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /maohk3
-      headers:
-        host: tw.henyo.us
-  - &id029
-    name: 🇺🇸_US_美国_17
+    network: tcp
+  - &id031
+    name: 🇩🇪_DE_德国
     type: vmess
-    server: 198.2.218.203
-    port: 51203
+    server: fra1.looooooongnet.lol
+    port: 10001
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
+    uuid: afa2b3af-248e-43a1-ad6b-076cca22e302
+    alterId: 0
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id030
-    name: 🇺🇸_US_美国_18
-    type: vmess
-    server: 192.3.150.233
-    port: 8443
-    cipher: auto
-    uuid: a6a37e04-5e81-44c9-be53-baa3ff46eb8b
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /8cda48b3
-  - &id031
-    name: 🇺🇸_US_美国_19
-    type: vmess
-    server: vau1.0bad.com
-    port: 443
-    cipher: auto
-    uuid: 927094d3-d678-4763-8591-e240d0bcae87
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /chat
-      headers:
-        host: vau1.0bad.com
   - &id032
-    name: 🇺🇸_US_美国_20
+    name: 🇺🇸_US_美国_13
     type: vmess
-    server: 162.159.36.24
-    port: 2053
+    server: 198.41.196.38
+    port: 80
     cipher: auto
-    uuid: 3a73acf2-c7e3-43b9-fca9-bdd2eb886186
+    uuid: 298530df-8418-4bc6-bff2-eeee595bf5cd
     alterId: 0
-    tls: true
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
@@ -359,81 +399,79 @@ proxies:
       headers:
         host: ylks.vtcss.top
   - &id033
-    name: 🇹🇼_TW_台湾_3
-    type: vmess
-    server: v07.jiedian.stream
-    port: 80
-    cipher: auto
-    uuid: 04daec61-d0bc-4a62-90ef-f7c62f271ed0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: v07.jiedian.stream
-  - &id034
-    name: 🇹🇼_TW_台湾_4
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本
     type: trojan
-    server: tone.zoozoo.co.za
-    port: 443
+    server: 120.204.94.83
+    port: 34004
     udp: true
-    password: 1381fa76-e460-3a03-a01b-b9ad00e01415
+    password: 334b58ea-d511-4d45-b8fa-35da1fc4d2dd
+    skip-cert-verify: true
+    network: tcp
+  - &id034
+    name: 🇨🇳_CN_中国
+    type: vmess
+    server: 47.104.240.230
+    port: 50002
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: false
     skip-cert-verify: true
     network: tcp
   - &id035
-    name: 🇩🇪_DE_德国
+    name: 🇺🇸_US_美国_14
     type: vmess
-    server: 45.14.174.152
-    port: 80
+    server: 172.247.148.82
+    port: 53302
     cipher: auto
-    uuid: 71cecc3f-e274-43f5-81a7-af37b1e3b185
-    alterId: 0
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: fr.66.now.cc
+    network: tcp
   - &id036
-    name: 🇺🇸_US_美国_21
+    name: 🇭🇰_HK_香港->🇳🇱_NL_荷兰
     type: vmess
-    server: 104.20.107.231
-    port: 80
+    server: 156.245.8.130
+    port: 31920
     cipher: auto
-    uuid: 298530df-8418-4bc6-bff2-eeee595bf5cd
-    alterId: 0
+    uuid: bd249e37-7359-41ee-84a7-09e49e0ec5c4
+    alterId: 64
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer
-      headers:
-        host: ylks.vtcss.top
+    network: tcp
   - &id037
-    name: 🇺🇸_US_美国_22
+    name: 🇫🇷_FR_法国_2
+    type: trojan
+    server: 52.47.208.16
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id038
+    name: 🇺🇸_US_美国->🇮🇩_ID_印度尼西亚
     type: vmess
-    server: 162.159.35.79
-    port: 2053
+    server: zendesk1.shopee.sg
+    port: 443
     cipher: auto
-    uuid: 3a73acf2-c7e3-43b9-fca9-bdd2eb886186
+    uuid: 0b3b165f-ba8f-4cb5-8d3c-ad6e2f9216f6
     alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /qwer
+      path: /vmess
       headers:
-        host: ylks.vtcss.top
-  - &id038
-    name: 🇺🇸_US_美国_23
+        host: idmws.mainssh.xyz
+  - &id039
+    name: 🇺🇸_US_美国_15
     type: vmess
-    server: 104.18.110.194
-    port: 2086
+    server: 104.18.73.133
+    port: 80
     cipher: auto
-    uuid: dac9cf36-ff4c-4d90-d549-d39086e75088
+    uuid: 0e290c91-6202-4c80-b151-7f493756b4ed
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -441,7 +479,37 @@ proxies:
     ws-opts:
       path: /qwer
       headers:
-        host: ylks.vtcss.top
+        host: uxx.vtcss.top
+  - &id040
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    type: vmess
+    server: digitalocean.com
+    port: 8080
+    cipher: auto
+    uuid: 5f098028-ea22-42ea-abfd-9222cb298b74
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: vceu.vpn66.eu.org
+  - &id041
+    name: 🇺🇸_US_美国_16
+    type: vmess
+    server: 104.18.1.196
+    port: 80
+    cipher: auto
+    uuid: a5756853-4a80-468a-af62-10565918f58f
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v03.ssrsub.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -506,6 +574,9 @@ proxy-groups:
       - *id036
       - *id037
       - *id038
+      - *id039
+      - *id040
+      - *id041
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -549,6 +620,9 @@ proxy-groups:
       - *id036
       - *id037
       - *id038
+      - *id039
+      - *id040
+      - *id041
   - name: SELECT
     type: select
     proxies:
@@ -590,6 +664,9 @@ proxy-groups:
       - *id036
       - *id037
       - *id038
+      - *id039
+      - *id040
+      - *id041
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
