--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,194 +6,47 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇳_CN_中国->🇰🇷_KR_韩国
-    type: vmess
-    server: 8k2r04.abzoones.xyz
-    port: 36401
-    cipher: auto
-    uuid: 55d9d954-a2d8-4222-8173-6f4c53ec658b
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: kr04.abpilot.xyz
-    network: tcp
+    name: 🇸🇬_SG_新加坡
+    type: ss
+    server: 54.255.237.136
+    port: 2333
+    password: doub.io
+    cipher: aes-256-cfb
   - &id002
-    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
-    type: vmess
-    server: 3d6e04.abzoones.xyz
-    port: 36841
-    cipher: auto
-    uuid: 55d9d954-a2d8-4222-8173-6f4c53ec658b
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: de04.abpilot.xyz
-    network: tcp
+    name: 🇱🇻_LV_拉脱维亚
+    type: ss
+    server: 185.135.86.173
+    port: 9001
+    password: UkXRsXvR6buDMG2Y
+    cipher: aes-256-cfb
   - &id003
-    name: 🇺🇸_US_美国_1
+    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡_1
     type: vmess
-    server: 140.99.57.5
-    port: 50042
+    server: 104.26.10.183
+    port: 2095
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
+    uuid: f25a0058-37be-4849-90b7-806d7cc8bf38
+    alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /@hkaa0
+      headers:
+        host: sg.wyhkaa0.tk
   - &id004
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_1
-    type: vmess
-    server: 9s5g05.abzoones.xyz
-    port: 36206
-    cipher: auto
-    uuid: 55d9d954-a2d8-4222-8173-6f4c53ec658b
-    alterId: 0
-    tls: true
+    name: 🇯🇵_JP_日本_1
+    type: trojan
+    server: spjp.1234567890spcloud.com
+    port: 443
+    udp: true
+    password: 69b5b7ab-d67e-4f5e-8a44-2cc93737b5e6
     skip-cert-verify: true
-    servername: sg05.abpilot.xyz
     network: tcp
   - &id005
-    name: 🇨🇳_CN_中国->🇹🇷_TR_土耳其
+    name: 🇺🇸_US_美国_1
     type: vmess
-    server: 2t1u04.abzoones.xyz
-    port: 36868
-    cipher: auto
-    uuid: 55d9d954-a2d8-4222-8173-6f4c53ec658b
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: tr04.abpilot.xyz
-    network: tcp
-  - &id006
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_2
-    type: vmess
-    server: 9s5g06.abzoones.xyz
-    port: 36211
-    cipher: auto
-    uuid: 55d9d954-a2d8-4222-8173-6f4c53ec658b
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: sg06.abpilot.xyz
-    network: tcp
-  - &id007
-    name: 🇺🇸_US_美国->🇮🇩_ID_印度尼西亚
-    type: vmess
-    server: zendesk1.shopee.sg
-    port: 443
-    cipher: auto
-    uuid: 0b3b165f-ba8f-4cb5-8d3c-ad6e2f9216f6
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: idmws.mainssh.xyz
-  - &id008
-    name: 🇨🇳_CN_中国->🇵🇹_PT_葡萄牙
-    type: vmess
-    server: 4p2t01.abzoones.xyz
-    port: 36881
-    cipher: auto
-    uuid: 55d9d954-a2d8-4222-8173-6f4c53ec658b
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: pt04.abpilot.xyz
-    network: tcp
-  - &id009
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_1
-    type: vmess
-    server: 1j8p06.abzoones.xyz
-    port: 36111
-    cipher: auto
-    uuid: 55d9d954-a2d8-4222-8173-6f4c53ec658b
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: jp06.abpilot.xyz
-    network: tcp
-  - &id010
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 137.175.69.104
-    port: 55307
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id011
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港
-    type: vmess
-    server: 8h2k05.abzoones.xyz
-    port: 36606
-    cipher: auto
-    uuid: 55d9d954-a2d8-4222-8173-6f4c53ec658b
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: hk05.abpilot.xyz
-    network: tcp
-  - &id012
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
-    type: vmess
-    server: 3u1s04.abzoones.xyz
-    port: 36501
-    cipher: auto
-    uuid: 55d9d954-a2d8-4222-8173-6f4c53ec658b
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: us04.abpilot.xyz
-    network: tcp
-  - &id013
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_2
-    type: vmess
-    server: 1j8p05.abzoones.xyz
-    port: 36106
-    cipher: auto
-    uuid: 55d9d954-a2d8-4222-8173-6f4c53ec658b
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: jp05.abpilot.xyz
-    network: tcp
-  - &id014
-    name: 🇺🇸_US_美国->🇦🇹_AT_奥地利_1
-    type: vmess
-    server: 104.27.1.133
-    port: 443
-    cipher: auto
-    uuid: 2484f444-0e00-5a0f-b8f1-4fe2a2550d65
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: 7c65c304-20a0-11ee-9138-37927036a50e.alluserconnectv2ray.xyz
-    network: ws
-    ws-opts:
-      path: /api01
-      headers:
-        host: schereinappclient.alluserconnectv2ray.xyz
-  - &id015
-    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾
-    type: vmess
-    server: 8t6w04.abzoones.xyz
-    port: 36301
-    cipher: auto
-    uuid: 55d9d954-a2d8-4222-8173-6f4c53ec658b
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: tw04.abpilot.xyz
-    network: tcp
-  - &id016
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 104.24.65.183
+    server: 104.16.110.60
     port: 2086
     cipher: auto
     uuid: dac9cf36-ff4c-4d90-d549-d39086e75088
@@ -205,157 +58,159 @@ proxies:
       path: /qwer
       headers:
         host: ylks.vtcss.top
-  - &id017
+  - &id006
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
+    type: vmess
+    server: qzcn2-01.dajuzi.cc
+    port: 15598
+    cipher: auto
+    uuid: aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id007
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港
+    type: vmess
+    server: qzcn2-01.dajuzi.cc
+    port: 15596
+    cipher: auto
+    uuid: aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id008
+    name: 🇨🇾_CY_塞浦路斯->🇳🇱_NL_荷兰
+    type: vmess
+    server: mci.saintink.eu.org
+    port: 443
+    cipher: auto
+    uuid: c226d9fa-b5a7-4f6e-9532-50137c89311d
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: nl1.v2rayserv.com/vmess
+      headers:
+        host: 4.saintink.eu.org
+  - &id009
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 173.245.58.94
+    port: 80
+    cipher: auto
+    uuid: 298530df-8418-4bc6-bff2-eeee595bf5cd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: ylks.vtcss.top
+  - &id010
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 198.41.206.174
+    port: 2053
+    cipher: auto
+    uuid: 3a73acf2-c7e3-43b9-fca9-bdd2eb886186
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: ylks.vtcss.top
+  - &id011
     name: 🇺🇸_US_美国_4
     type: vmess
-    server: 172.247.67.45
-    port: 50035
+    server: 64.32.4.47
+    port: 43166
     cipher: auto
-    uuid: 2278efe4-ad0c-47ce-9480-068608368d76
+    uuid: 8653004f-de67-44c2-9cce-e0830933fb03
     alterId: 64
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id018
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_3
+  - &id012
+    name: 🇭🇰_HK_香港
     type: vmess
-    server: 1j8p04.abzoones.xyz
-    port: 36116
+    server: 8.210.154.114
+    port: 40447
     cipher: auto
-    uuid: 55d9d954-a2d8-4222-8173-6f4c53ec658b
+    uuid: da8c9ac2-39de-4bed-ee9f-4e4340ade47d
     alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: jp04.abpilot.xyz
-    network: tcp
-  - &id019
-    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚_1
-    type: vmess
-    server: 5a4u04.abzoones.xyz
-    port: 36821
-    cipher: auto
-    uuid: 55d9d954-a2d8-4222-8173-6f4c53ec658b
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: au04.abpilot.xyz
-    network: tcp
-  - &id020
-    name: 🇨🇳_CN_中国
-    type: vmess
-    server: 42.192.17.34
-    port: 50002
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id021
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_1
+  - &id013
+    name: 🇧🇷_BR_巴西->🇩🇪_DE_德国
     type: vmess
-    server: 45.199.138.132
-    port: 55594
+    server: dearmb.76898102.xyz
+    port: 2052
     cipher: auto
-    uuid: 1d474f0b-e78d-4af9-bc4a-a467467bc7a7
-    alterId: 64
+    uuid: 4896559c-c94e-342a-b208-6107ec292652
+    alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id022
-    name: 🇨🇳_CN_中国->🇻🇳_VN_越南
-    type: vmess
-    server: 3v4n04.abzoones.xyz
-    port: 36874
-    cipher: auto
-    uuid: 55d9d954-a2d8-4222-8173-6f4c53ec658b
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: vn04.abpilot.xyz
-    network: tcp
-  - &id023
-    name: 🇺🇸_US_美国->🇦🇹_AT_奥地利_2
-    type: vmess
-    server: 104.25.254.42
-    port: 443
-    cipher: auto
-    uuid: 2484f444-0e00-5a0f-b8f1-4fe2a2550d65
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: 7c65c304-20a0-11ee-9138-37927036a50e.alluserconnectv2ray.xyz
     network: ws
     ws-opts:
-      path: /api01
+      path: /ancihgrt
       headers:
-        host: schereinappclient.alluserconnectv2ray.xyz
-  - &id024
+        host: dearmb.76898102.xyz
+  - &id014
+    name: 🇫🇷_FR_法国->🇺🇸_US_美国
+    type: vmess
+    server: 173.245.49.115
+    port: 80
+    cipher: auto
+    uuid: 298530df-8418-4bc6-bff2-eeee595bf5cd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: ylks.vtcss.top
+  - &id015
+    name: 🇯🇵_JP_日本_2
+    type: ss
+    server: 54.199.83.239
+    port: 2333
+    password: doub.io
+    cipher: aes-256-cfb
+  - &id016
     name: 🇺🇸_US_美国_5
     type: vmess
-    server: 198.2.218.209
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1689326360096
-      headers:
-        host: www.78280643.xyz
-  - &id025
-    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚_2
-    type: vmess
-    server: 8t6w06.abzoones.xyz
-    port: 36311
-    cipher: auto
-    uuid: 55d9d954-a2d8-4222-8173-6f4c53ec658b
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: tw06.abpilot.xyz
-    network: tcp
-  - &id026
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 198.2.218.209
-    port: 51203
+    server: 107.167.16.34
+    port: 45592
     cipher: auto
     uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
     alterId: 64
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id027
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_2
+  - &id017
+    name: 🇺🇸_US_美国_6
     type: vmess
-    server: 156.225.67.80
-    port: 443
+    server: 162.159.247.37
+    port: 80
     cipher: auto
-    uuid: 3fd637ad-46fe-4f85-a6e8-86b00bca1122
-    alterId: 64
-    tls: true
+    uuid: 298530df-8418-4bc6-bff2-eeee595bf5cd
+    alterId: 0
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /path/1689241126044
+      path: /qwer
       headers:
-        host: www.13340198.xyz
-  - &id028
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
-    type: vmess
-    server: 7i4n04.abzoones.xyz
-    port: 36831
-    cipher: auto
-    uuid: 55d9d954-a2d8-4222-8173-6f4c53ec658b
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: in04.abpilot.xyz
-    network: tcp
-  - &id029
+        host: ylks.vtcss.top
+  - &id018
     name: 🇺🇸_US_美国_7
     type: vmess
     server: 192.74.228.185
@@ -366,7 +221,7 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id030
+  - &id019
     name: 🇺🇸_US_美国_8
     type: vmess
     server: 104.18.110.194
@@ -381,7 +236,7 @@ proxies:
       path: /qwer
       headers:
         host: ylks.vtcss.top
-  - &id031
+  - &id020
     name: 🇺🇸_US_美国_9
     type: vmess
     server: 104.19.97.1
@@ -396,8 +251,192 @@ proxies:
       path: /qwer
       headers:
         host: ylks.vtcss.top
-  - &id032
+  - &id021
     name: 🇺🇸_US_美国_10
+    type: vmess
+    server: 192.3.150.233
+    port: 8443
+    cipher: auto
+    uuid: a6a37e04-5e81-44c9-be53-baa3ff46eb8b
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /8cda48b3
+  - &id022
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: 162.159.36.24
+    port: 2053
+    cipher: auto
+    uuid: 3a73acf2-c7e3-43b9-fca9-bdd2eb886186
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: ylks.vtcss.top
+  - &id023
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: 173.245.59.198
+    port: 2086
+    cipher: auto
+    uuid: dac9cf36-ff4c-4d90-d549-d39086e75088
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: ylks.vtcss.top
+  - &id024
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: 173.245.58.237
+    port: 2053
+    cipher: auto
+    uuid: 3a73acf2-c7e3-43b9-fca9-bdd2eb886186
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: ylks.vtcss.top
+  - &id025
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: 198.41.196.38
+    port: 80
+    cipher: auto
+    uuid: 298530df-8418-4bc6-bff2-eeee595bf5cd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: ylks.vtcss.top
+  - &id026
+    name: 🇺🇸_US_美国_15
+    type: vmess
+    server: 104.27.96.113
+    port: 2053
+    cipher: auto
+    uuid: 3a73acf2-c7e3-43b9-fca9-bdd2eb886186
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: ylks.vtcss.top
+  - &id027
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: 45.144.179.138
+    port: 443
+    cipher: auto
+    uuid: 96cbe4a6-5728-42df-dc7a-ceb9b51a3db5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id028
+    name: 🇺🇸_US_美国_16
+    type: vmess
+    server: ahsorathiyaa.fly.dev
+    port: 443
+    cipher: auto
+    uuid: de04add9-5c68-8bab-950c-08cd5320df18
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: ahsorathiyaa.fly.dev
+  - &id029
+    name: 🇺🇸_US_美国_17
+    type: vmess
+    server: 104.20.185.104
+    port: 80
+    cipher: auto
+    uuid: 298530df-8418-4bc6-bff2-eeee595bf5cd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: ylks.vtcss.top
+  - &id030
+    name: 🇸🇬_SG_新加坡->🇺🇸_US_美国
+    type: trojan
+    server: pqawszf.aiopen.cfd
+    port: 443
+    udp: true
+    password: 7ad2a5e0-906b-4b3e-97bb-b5f3992cb19d
+    sni: us1.pqjc.site
+    skip-cert-verify: true
+    network: tcp
+  - &id031
+    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡_2
+    type: vmess
+    server: 104.25.79.213
+    port: 2095
+    cipher: auto
+    uuid: f25a0058-37be-4849-90b7-806d7cc8bf38
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /@hkaa0
+      headers:
+        host: sg.wyhkaa0.tk
+  - &id032
+    name: 🇺🇸_US_美国_18
+    type: vmess
+    server: 141.101.120.126
+    port: 2086
+    cipher: auto
+    uuid: dac9cf36-ff4c-4d90-d549-d39086e75088
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: ylks.vtcss.top
+  - &id033
+    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡_3
+    type: vmess
+    server: 173.245.59.165
+    port: 2095
+    cipher: auto
+    uuid: f25a0058-37be-4849-90b7-806d7cc8bf38
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /@hkaa0
+      headers:
+        host: sg.wyhkaa0.tk
+  - &id034
+    name: 🇺🇸_US_美国_19
     type: vmess
     server: 162.159.50.55
     port: 8880
@@ -411,16 +450,6 @@ proxies:
       path: /qwer
       headers:
         host: uxx.vtcss.top
-  - &id033
-    name: 🇺🇸_US_美国_11
-    type: trojan
-    server: ssrsub.t19.trojan.tel
-    port: 80
-    udp: true
-    password: c8e877d3-2909-416d-aa5a-6d1722a374bd
-    sni: ssrsub.t19.trojan.tel
-    skip-cert-verify: true
-    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -480,6 +509,7 @@ proxy-groups:
       - *id031
       - *id032
       - *id033
+      - *id034
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -518,6 +548,7 @@ proxy-groups:
       - *id031
       - *id032
       - *id033
+      - *id034
   - name: SELECT
     type: select
     proxies:
@@ -554,6 +585,7 @@ proxy-groups:
       - *id031
       - *id032
       - *id033
+      - *id034
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
